--- a/app/src/main/res/layout/mypage_activity_delivery_address_manage.xml
+++ b/app/src/main/res/layout/mypage_activity_delivery_address_manage.xml
@@ -39,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="26dp"
-        android:text="주소 관리"
+        android:text="배송지 관리"
         android:textColor="@color/black"
         android:textSize="22sp"
         android:textStyle="bold"
@@ -66,7 +66,7 @@
         android:layout_gravity="center"
         android:layout_marginBottom="20dp"
         android:background="@color/main"
-        android:text="주소 추가"
+        android:text="배송지 추가"
         android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
