Refund account db connection

--- a/app/src/main/res/layout/mypage_activity_setting.xml
+++ b/app/src/main/res/layout/mypage_activity_setting.xml
@@ -80,6 +80,102 @@
         tools:ignore="HardcodedText" />
 
     <TextView
+        android:id="@+id/user_nickname"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="64dp"
+        android:text="닉네임"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_user_info"
+        tools:ignore="HardcodedText" />
+
+    <TextView
+        android:id="@+id/account"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="108dp"
+        android:text="환불계좌은행"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_user_info"
+        tools:ignore="HardcodedText" />
+
+    <TextView
+        android:id="@+id/account2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="156dp"
+        android:text="환불계좌"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_user_info"
+        tools:ignore="HardcodedText" />
+
+    <TextView
+        android:id="@+id/nickname_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginLeft="64dp"
+        android:layout_marginTop="64dp"
+        android:text=""
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.279"
+        app:layout_constraintStart_toStartOf="@+id/user_name"
+        app:layout_constraintTop_toBottomOf="@+id/btn_user_info"
+        tools:ignore="HardcodedText" />
+
+    <TextView
+        android:id="@+id/bankname_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginLeft="64dp"
+        android:layout_marginTop="108dp"
+        android:text=""
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.279"
+        app:layout_constraintStart_toStartOf="@+id/user_name"
+        app:layout_constraintTop_toBottomOf="@+id/btn_user_info"
+        tools:ignore="HardcodedText" />
+
+    <TextView
+        android:id="@+id/account_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginLeft="64dp"
+        android:layout_marginTop="156dp"
+        android:text=""
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.279"
+        app:layout_constraintStart_toStartOf="@+id/user_name"
+        app:layout_constraintTop_toBottomOf="@+id/btn_user_info"
+        tools:ignore="HardcodedText" />
+
+    <TextView
         android:id="@+id/user_name_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -90,7 +186,7 @@
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.039"
+        app:layout_constraintHorizontal_bias="0.279"
         app:layout_constraintStart_toStartOf="@+id/user_name"
         app:layout_constraintTop_toBottomOf="@+id/btn_user_info"
         tools:ignore="HardcodedText" />
@@ -99,12 +195,13 @@
         android:id="@+id/btn_change_password"
         android:layout_width="411dp"
         android:layout_height="70dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="180dp"
         android:background="#00FF0000"
-        android:text="비밀번호 변경"
         android:gravity="center"
+        android:text="비밀번호 변경"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/user_name"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
@@ -113,13 +210,13 @@
         android:id="@+id/btn_delivery_address_manage"
         android:layout_width="411dp"
         android:layout_height="70dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="8dp"
         android:background="#00FF0000"
         android:gravity="center"
         android:text="배송지 관리"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_change_password"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
@@ -128,7 +225,7 @@
         android:id="@+id/btn_refund_account_manage"
         android:layout_width="411dp"
         android:layout_height="70dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="12dp"
         android:background="#00FF0000"
         android:gravity="center"
         android:text="환불 계좌 관리"
