--- a/app/src/main/res/layout/seller_activity_product_register_request.xml
+++ b/app/src/main/res/layout/seller_activity_product_register_request.xml
@@ -156,7 +156,7 @@
     </LinearLayout>
 
     <RadioGroup
-        android:id="@+id/radioGroup"
+        android:id="@+id/superradioGroup"
         android:layout_width="match_parent"
         android:layout_height="65dp"
         android:orientation="horizontal"
@@ -200,7 +200,7 @@
                 android:text="팬츠" />
 
             <RadioButton
-                android:id="@+id/checkBox_bag"
+                android:id="@+id/radio_bag"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="가방" />
@@ -215,13 +215,13 @@
             tools:layout_editor_absoluteY="439dp">
 
             <RadioButton
-                android:id="@+id/checkBox_skirt"
+                android:id="@+id/radio_skirt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="스커트/원피스" />
 
             <RadioButton
-                android:id="@+id/checkBox_shoes"
+                android:id="@+id/radio_shoes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="신발" />
@@ -297,7 +297,7 @@
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroup">
+        app:layout_constraintTop_toBottomOf="@+id/superradioGroup">
 
         <LinearLayout
 
@@ -321,7 +321,8 @@
             android:id="@+id/small_category_id"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:ignore="InvalidId">
+            tools:ignore="InvalidId"
+            >
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -335,6 +336,68 @@
                     android:orientation="vertical">
 
                     <RadioButton
+                        android:id="@+id/radioButton1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="RadioButton" />
+
+                    <RadioButton
+                        android:id="@+id/radioButton2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="RadioButton" />
+
+                    <RadioButton
+                        android:id="@+id/radioButton3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="RadioButton" />
+
+                    <RadioButton
+                        android:id="@+id/radioButton4"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="RadioButton" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <RadioButton
+                        android:id="@+id/radioButton5"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="RadioButton" />
+
+                    <RadioButton
+                        android:id="@+id/radioButton6"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="RadioButton" />
+
+                    <RadioButton
+                        android:id="@+id/radioButton7"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="RadioButton" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <RadioButton
+                        android:id="@+id/radioButton8"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="RadioButton" />
+
+                    <RadioButton
                         android:id="@+id/radioButton9"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -342,68 +405,6 @@
 
                     <RadioButton
                         android:id="@+id/radioButton10"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="RadioButton" />
-
-                    <RadioButton
-                        android:id="@+id/radioButton11"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="RadioButton" />
-
-                    <RadioButton
-                        android:id="@+id/radioButton12"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="RadioButton" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                    <RadioButton
-                        android:id="@+id/radioButton15"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="RadioButton" />
-
-                    <RadioButton
-                        android:id="@+id/radioButton13"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="RadioButton" />
-
-                    <RadioButton
-                        android:id="@+id/radioButton14"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="RadioButton" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                    <RadioButton
-                        android:id="@+id/radioButton16"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="RadioButton" />
-
-                    <RadioButton
-                        android:id="@+id/radioButton17"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="RadioButton" />
-
-                    <RadioButton
-                        android:id="@+id/radioButton18"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="RadioButton" />
