quanfity->quantity 오타 수정

--- a/app/src/main/res/layout/manager_item_product_register.xml
+++ b/app/src/main/res/layout/manager_item_product_register.xml
@@ -86,7 +86,7 @@
         app:layout_constraintTop_toBottomOf="@+id/productName" />
 
     <TextView
-        android:id="@+id/productQuantify"
+        android:id="@+id/productQuantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
