--- a/app/src/main/res/layout/seller_activity_product_revise_request.xml
+++ b/app/src/main/res/layout/seller_activity_product_revise_request.xml
@@ -78,7 +78,7 @@
         app:layout_constraintTop_toBottomOf="@+id/productName"/>
 
     <EditText
-        android:id="@+id/productQuantify"
+        android:id="@+id/productQuantity"
         android:layout_width="100dp"
         android:layout_height="30dp"
         android:layout_marginTop="5dp"
