--- a/app/src/main/res/layout/mypage_item_address.xml
+++ b/app/src/main/res/layout/mypage_item_address.xml
@@ -86,7 +86,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="20dp"
+        android:textColor="@color/black"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.928"
         app:layout_constraintStart_toEndOf="@+id/deliveryAddressName"
