--- a/app/src/main/res/layout/order_form.xml
+++ b/app/src/main/res/layout/order_form.xml
@@ -96,7 +96,16 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:layout_marginStart="35dp"
-                    android:text="장소 이름"
+                    android:text=""
+                    android:textSize="18sp"/>
+
+                <TextView
+                    android:id="@+id/shipping_recipient"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginStart="35dp"
+                    android:text=""
                     android:textSize="18sp"/>
 
                 <TextView
@@ -105,7 +114,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:layout_marginStart="35dp"
-                    android:text="010-0000-1111"
+                    android:text=""
                     android:textSize="18sp"/>
 
                 <TextView
@@ -114,14 +123,23 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:layout_marginStart="35dp"
-                    android:text="전북 전주시 던진구 창포길 93(전북대학교) ~~"
+                    android:text=""
+                    android:textSize="18sp"/>
+
+                <TextView
+                    android:id="@+id/shipping_address_detail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginStart="35dp"
+                    android:text=""
                     android:textSize="18sp"/>
 
                 <TextView
                     android:id="@+id/delivery_request"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="배송 요청사항"
+                    android:text=""
                     android:layout_marginTop="20dp"
                     android:layout_marginStart="35dp"
                     android:layout_marginBottom="20dp"
