--- a/app/src/main/res/layout/mypage_activity_review_write.xml
+++ b/app/src/main/res/layout/mypage_activity_review_write.xml
@@ -63,7 +63,7 @@
         app:layout_constraintTop_toBottomOf="@+id/header_title" />
 
     <EditText
-        android:id="@+id/comment"
+        android:id="@+id/editTextContent"
         android:layout_width="360dp"
         android:layout_height="400dp"
         android:layout_marginTop="20dp"
@@ -76,6 +76,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/productImage"
         app:layout_constraintVertical_bias="0.0" />
+
+    <EditText
+        android:id="@+id/editTextScore"
+        android:layout_width="200dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/mypage_edit_text_rounded_border_gray"
+        android:ems="10"
+        android:paddingLeft="10dp"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_review_submit"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextContent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/btn_review_submit"
