--- a/app/src/main/res/layout/detailpage_activity_main.xml
+++ b/app/src/main/res/layout/detailpage_activity_main.xml
@@ -161,27 +161,19 @@
                 android:layout_marginBottom="5dp"
                 android:background="@color/white" />
 
-            <ImageView
-                android:id="@+id/ellipse_1"
-                android:layout_width="38dp"
-                android:layout_height="38dp"
-                android:layout_above="@id/view2"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="365dp"
-                android:layout_marginBottom="-40dp"
-                android:src="@drawable/category_ad"
-                />
 
             <TextView
                 android:id="@+id/brandText"
-                android:layout_width="wrap_content"
+                android:layout_width="116dp"
                 android:layout_height="wrap_content"
                 android:layout_above="@id/view2"
-                android:layout_marginEnd="-80dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="280dp"
                 android:layout_marginBottom="-36dp"
-                android:layout_toStartOf="@id/ellipse_1"
-                android:text="브랜드"
-                android:textColor="#FF000000"/>
+                android:text="브랜드 이름"
+                android:textColor="#FF000000"
+                android:textSize="14dp" />
+
             <View
                 android:id="@+id/view3"
                 android:layout_width="match_parent"
