문의/답변 확인 기능 추가

--- a/app/src/main/res/layout/mypage_activity_answer_list.xml
+++ b/app/src/main/res/layout/mypage_activity_answer_list.xml
@@ -19,19 +19,6 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
-    <Button
-        android:id="@+id/btn_question_plus"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginLeft="330dp"
-        android:layout_marginBottom="30dp"
-        android:background="@drawable/plus_icon"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
-
     <TextView
         android:id="@+id/header_title"
         android:layout_width="wrap_content"
@@ -80,7 +67,7 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/question_recyclerView"
+        android:id="@+id/answer_recyclerView"
         android:layout_width="390dp"
         android:layout_height="0dp"
         android:layout_marginTop="50dp"
