--- a/app/src/main/res/layout/mypage_activity_main.xml
+++ b/app/src/main/res/layout/mypage_activity_main.xml
@@ -128,6 +128,25 @@
         app:layout_constraintTop_toBottomOf="@+id/btn_refund_exchange_list"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
+
+    <Button
+        android:id="@+id/btn_qna"
+        android:layout_width="411dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="5dp"
+        android:background="#00FF0000"
+        android:gravity="left"
+        android:paddingLeft="20dp"
+        android:paddingTop="20dp"
+        android:text="문의하기"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_review_write"
+        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
+
+
     <View
         android:id="@+id/bar_rectangle_id"
         android:layout_width="match_parent"
