--- a/app/src/main/res/layout/mypage_activity_question_write.xml
+++ b/app/src/main/res/layout/mypage_activity_question_write.xml
@@ -35,38 +35,59 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="HardcodedText" />
 
-    <ImageView
-        android:id="@+id/productImage"
-        android:layout_width="80dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="80dp"
-        android:src="@drawable/mypage_clothes"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/header_title" />
-
     <TextView
-        android:id="@+id/productName"
+        android:id="@+id/TextViewSubject"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="66dp"
-        android:layout_marginLeft="40dp"
-        android:text=""
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="12dp"
+        android:text="제목"
         android:textColor="@color/black"
-        android:textSize="18sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/productImage"
-        app:layout_constraintTop_toBottomOf="@+id/header_title" />
+        app:layout_constraintHorizontal_bias="0.058"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/header_title"
+        tools:ignore="HardcodedText" />
+
+    <EditText
+        android:id="@+id/editTextSubject"
+        android:layout_width="360dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="14dp"
+        android:background="@drawable/mypage_edit_text_rounded_border_gray"
+        android:ems="10"
+        android:paddingLeft="10dp"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/TextViewSubject" />
+
+    <TextView
+        android:id="@+id/TextViewContent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="12dp"
+        android:text="내용"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.058"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextSubject"
+        tools:ignore="HardcodedText" />
 
     <EditText
         android:id="@+id/editTextContent"
         android:layout_width="360dp"
         android:layout_height="400dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="14dp"
         android:background="@drawable/mypage_edit_text_rounded_border_gray"
         android:ems="10"
         android:paddingLeft="10dp"
@@ -74,7 +95,7 @@
         app:layout_constraintBottom_toTopOf="@+id/btn_question_submit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/productImage"
+        app:layout_constraintTop_toBottomOf="@+id/TextViewContent"
         app:layout_constraintVertical_bias="0.0" />
     <Button
         android:id="@+id/btn_question_submit"
