--- a/app/src/main/res/layout/seller_activity_mypage_main.xml
+++ b/app/src/main/res/layout/seller_activity_mypage_main.xml
@@ -53,70 +53,6 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
-    <Button
-        android:id="@+id/btn_product_list"
-        android:layout_width="411dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="12dp"
-        android:background="#00FF0000"
-        android:gravity="left"
-        android:paddingLeft="20dp"
-        android:paddingTop="20dp"
-        android:text="물품 목록"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/seller_image"
-        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
-
-    <Button
-        android:id="@+id/btn_product_register"
-        android:layout_width="411dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="8dp"
-        android:background="#00FF0000"
-        android:gravity="left"
-        android:paddingLeft="20dp"
-        android:paddingTop="20dp"
-        android:text="물품 등록 요청"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_product_list"
-        tools:ignore="HardcodedText,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
-
-    <Button
-        android:id="@+id/btn_product_revise"
-        android:layout_width="411dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="5dp"
-        android:background="#00FF0000"
-        android:gravity="left"
-        android:paddingLeft="20dp"
-        android:paddingTop="20dp"
-        android:text="물품 수정 요청"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_product_register"
-        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
-
-    <Button
-        android:id="@+id/btn_product_delete"
-        android:layout_width="411dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="5dp"
-        android:background="#00FF0000"
-        android:gravity="left"
-        android:paddingLeft="20dp"
-        android:paddingTop="20dp"
-        android:text="물품 삭제"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_product_revise"
-        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
-
     <ImageView
         android:id="@+id/seller_image"
         android:layout_width="90dp"
@@ -146,55 +82,153 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="HardcodedText" />
 
-    <Button
-        android:id="@+id/btn_order_delivery_list"
-        android:layout_width="411dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="5dp"
-        android:background="#00FF0000"
-        android:gravity="left"
-        android:paddingLeft="20dp"
-        android:paddingTop="20dp"
-        android:text="주문/배송 내역"
-        android:textSize="20sp"
+    <ScrollView
+        android:layout_width="410dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="10dp"
+        android:fillViewport="true"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_product_delete"
-        tools:ignore="HardcodedText,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+        app:layout_constraintTop_toBottomOf="@+id/seller_image">
 
-    <Button
-        android:id="@+id/btn_refund_exchange_list"
-        android:layout_width="411dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="5dp"
-        android:background="#00FF0000"
-        android:gravity="left"
-        android:paddingLeft="20dp"
-        android:paddingTop="20dp"
-        android:text="환불/교환 내역"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_order_delivery_list"
-        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <Button
-        android:id="@+id/btn_review_list"
-        android:layout_width="411dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="5dp"
-        android:background="#00FF0000"
-        android:gravity="left"
-        android:paddingLeft="20dp"
-        android:paddingTop="20dp"
-        android:text="후기 내역"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_refund_exchange_list"
-        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
+            <Button
+                android:id="@+id/btn_product_list"
+                android:layout_width="411dp"
+                android:layout_height="70dp"
+                android:layout_marginTop="12dp"
+                android:background="#00FF0000"
+                android:gravity="left"
+                android:paddingLeft="20dp"
+                android:paddingTop="20dp"
+                android:text="물품 목록"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/seller_image"
+                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
+
+            <Button
+                android:id="@+id/btn_product_register"
+                android:layout_width="411dp"
+                android:layout_height="70dp"
+                android:layout_marginTop="8dp"
+                android:background="#00FF0000"
+                android:gravity="left"
+                android:paddingLeft="20dp"
+                android:paddingTop="20dp"
+                android:text="물품 등록 요청"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btn_product_list"
+                tools:ignore="HardcodedText,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+
+            <Button
+                android:id="@+id/btn_product_revise"
+                android:layout_width="411dp"
+                android:layout_height="70dp"
+                android:layout_marginTop="5dp"
+                android:background="#00FF0000"
+                android:gravity="left"
+                android:paddingLeft="20dp"
+                android:paddingTop="20dp"
+                android:text="물품 수정 요청"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btn_product_register"
+                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
+
+            <Button
+                android:id="@+id/btn_product_delete"
+                android:layout_width="411dp"
+                android:layout_height="70dp"
+                android:layout_marginTop="5dp"
+                android:background="#00FF0000"
+                android:gravity="left"
+                android:paddingLeft="20dp"
+                android:paddingTop="20dp"
+                android:text="물품 삭제"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btn_product_revise"
+                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
 
+            <Button
+                android:id="@+id/btn_order_delivery_list"
+                android:layout_width="411dp"
+                android:layout_height="70dp"
+                android:layout_marginTop="5dp"
+                android:background="#00FF0000"
+                android:gravity="left"
+                android:paddingLeft="20dp"
+                android:paddingTop="20dp"
+                android:text="주문/배송 내역"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btn_product_delete"
+                tools:ignore="HardcodedText,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+
+            <Button
+                android:id="@+id/btn_refund_exchange_list"
+                android:layout_width="411dp"
+                android:layout_height="70dp"
+                android:layout_marginTop="5dp"
+                android:background="#00FF0000"
+                android:gravity="left"
+                android:paddingLeft="20dp"
+                android:paddingTop="20dp"
+                android:text="환불/교환 내역"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btn_order_delivery_list"
+                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
+
+            <Button
+                android:id="@+id/btn_review_list"
+                android:layout_width="411dp"
+                android:layout_height="70dp"
+                android:layout_marginTop="5dp"
+                android:background="#00FF0000"
+                android:gravity="left"
+                android:paddingLeft="20dp"
+                android:paddingTop="20dp"
+                android:text="후기 내역"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btn_refund_exchange_list"
+                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
+
+            <Button
+                android:id="@+id/btn_question_list"
+                android:layout_width="411dp"
+                android:layout_height="70dp"
+                android:layout_marginTop="5dp"
+                android:background="#00FF0000"
+                android:gravity="left"
+                android:paddingLeft="20dp"
+                android:paddingTop="20dp"
+                android:text="문의 내역"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btn_refund_exchange_list"
+                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
+
+
+        </LinearLayout>
+    </ScrollView>
 
 
 
